--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/axios": "^5.4.1",
     "cross-env": "^5.2.0",
     "node-sass": "^4.11.0",
+    "numeral": "^2.0.6",
     "nuxt": "^2.4.0",
     "sass-loader": "^7.1.0",
     "vuetify": "^1.5.5",
