--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nuxt": "^2.4.0",
     "sass-loader": "^7.1.0",
     "vuetify": "^1.5.5",
-    "vuetify-loader": "^1.2.1"
+    "vuetify-loader": "^1.2.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
